# gmail-debit-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  analyzer.py  gmail_debit_collector.py  main.py  pyproject.toml  sample_notification.eml  test_analyzer.py  test_gmail_debit_collector.py  test_main.py
